[package]
name = "cpp-linter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cpp_linter"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "cpp-linter"
path = "src/bin.rs"

[dependencies]
clap = { version = ">=4.4.2" }
git2 = ">=0.18.1"
lenient_semver = "0.4.2"
log = ">=0.4.20"
pyo3 = { version = ">=0.19.2", features = ["extension-module"] }
regex = "1.10.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
semver = "1.0.20"
serde = { version = "1.0.193", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.108"
which = "5.0.0"

[dev-dependencies]
tempfile = "3.8.1"

[package.metadata.scripts]
run = "cargo run"
check = "cargo check"
build = "cargo build"
release = "cargo build --release"
