[package]
name = "cpp-linter-cli"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpp-linter-lib = { path = "../cpp-linter-lib", version = "*" }

[features]
openssl-vendored = ["cpp-linter-lib/openssl-vendored"]
