[package]
name = "cpp-linter-lib"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = ">=4.4.2" }
git2 = ">=0.18.1"
lenient_semver = "0.4.2"
log = ">=0.4.20"
openssl = { version = "0.10", features = ["vendored"], optional = true }
openssl-probe = { version = "0.1", optional = true }
regex = "1.10.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
semver = "1.0.20"
serde = { version = "1.0.193", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.108"
which = "5.0.0"

[dev-dependencies]
tempfile = "3.8.1"

[features]
openssl-vendored = ["dep:openssl", "dep:openssl-probe"]
